Fix: Translation strings

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -8,7 +8,7 @@
   "biography": {
     "about": "A propos de Dolya",
     "one": "Né de la réunion de Fabrice (batterie) et Jaufré (basse), et de la rencontre avec Florent (clavier) et JB (guitare), le groupe Dolya a su créer un univers bien à lui: instrumental, résolument prog, au carrefour entre la synth-wave, l'ambient et le métal industriel.",
-    "two": "Le premier EP du groupe, enregistré au Studion Waïti à Toulouse par Yannick Tournier en juin 2020, offrira un premier apperçu de l'univers du groupe. Au printemps 2021, Dolya prévoit de retourner en studio pour l'enregistrement de leur premier album."
+    "two": "Le premier EP du groupe, enregistré au Studion Waïti à Toulouse par Yannick Tournier en juin 2020, offrira un premier aperçu de l'univers du groupe. Au printemps 2021, Dolya prévoit de retourner en studio pour l'enregistrement de leur premier album."
   },
   "contact": {
     "booking": "Booking/Management"
